# checkpoint-rpc

./: Cargo.toml  contract.wasm  key_utils.rs  public_key_hex.txt  secret_key.pem
src/: deploy.rs  executable_deploy_item.rs  main.rs
