[package]
name = "testNg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
jsonrpc-lite = "0.6.0"
reqwest = {version = "0.11.14", features = ["json"]}
semver = "1.0.16"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"]}
schemars = { version = "=0.8.5", features = ["preserve_order", "impl_json_schema"] }
serde = { version = "1", features = ["derive", "rc", "std"] }
datasize = { version = "0.2.9", features = ["detailed", "fake_clock-types", "futures-types", "smallvec-types"], optional = true}
derive_more = "0.99.17"
ed25519-dalek = { version = "1", default-features = false, features = ["rand", "serde", "u64_backend"] }
k256 = { version = "0.7.2", features = ["arithmetic", "ecdsa", "sha256", "zeroize"] }
base16 = "0.2.1"
hex_fmt = "0.3.0"
hex-buffer-serde = "0.4.0"
itertools = "0.10.0"
humantime = "2"
pem = "1.1.1"

casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev", features = ["std"]}
casper-hashing = { git = "https://github.com/casper-network/casper-node", branch = "release-1.4.14"}

